apps/arr-stack/radarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    gateway-access: radarr
