apps/arr-stack/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:6.4.4@sha256:adb6c09d6b729ea5e642c99cea35af72702ef476bf4763f153299ac5db9f0b4f
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 3103
          runAsGroup: 3100
        ports:
        - name: radarr
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-data
          mountPath: /media_data
        - name: run-tmpfs
          mountPath: /run
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: media-data
        persistentVolumeClaim:
          claimName: media-data-pvc
      - name: run-tmpfs
        emptyDir:
          medium: Memory
