apps/arr-stack/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-webui
spec:
  selector:
    app: radarr
  ports:
  - port: 7878
