apps/arr-stack/radarr/route.yaml
# apps/arr-stack/radarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-route
  namespace: radarr
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: radarr-https     
  hostnames:
    - "radarr.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: radarr-webui
          port: 7878
